--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
     "@testing-library/jest-dom": "^5.11.4",
     "@testing-library/react": "^11.1.0",
     "@testing-library/user-event": "^12.1.10",
+    "axios": "^0.21.0",
     "bootstrap": "^4.5.3",
     "firebase": "^8.0.1",
     "node-sass": "^5.0.0",
@@ -47,5 +48,6 @@
   },
   "devDependencies": {
     "cross-env": "^7.0.2"
-  }
+  },
+  "proxy": "https://kapi.kakao.com"
 }
